fix: remove overflow anchor

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -28,6 +28,7 @@
 
 * {
   font-family: 'Aeonik Pro', sans-serif;
+  overflow-anchor: none;
   /*border: 0.1px solid green;*/
 }
 
